[gd_scene load_steps=4 format=3 uid="uid://cjdavdyspr8aq"]

[ext_resource type="PackedScene" uid="uid://c750bytgihptf" path="res://scenes/EnemySpawner/enemy_spawner.tscn" id="1_br5ku"]
[ext_resource type="Script" path="res://scenes/EnemySpawner/enemy_nest.gd" id="1_h82ox"]
[ext_resource type="PackedScene" uid="uid://dpq2fe3upghce" path="res://scenes/EnemySpawner/enemy_bucket.tscn" id="2_rw5jr"]

[node name="EnemyNest" type="Node"]
script = ExtResource("1_h82ox")

[node name="EnemySpawner" parent="." instance=ExtResource("1_br5ku")]

[node name="EnemyBucket" parent="." instance=ExtResource("2_rw5jr")]
